# DominusUltra

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  benchmark.py  demo_speedtest.py  dominus_ultra.py  dominush_ultra.py  pyproject.toml  requirements.txt  rope.py  setup.py  test_dominus.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: benchmark_result.md  bug_report.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  RECORDING_GUIDE.md
docs/evidence/: COLAB_T4_ROPE_8192.md
dominusultra/: __init__.py
examples/: README.md  webgpu-rope-demo.html
tests/: test_dominus.py
