[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dominusultra"
version = "0.1.0"
description = "High-performance Triton kernel for fused RoPE + Grouped Query Attention (GQA) causal attention"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Lyle Perrien II", email = "contact@michiganmindmend.org"}
]
maintainers = [
    {name = "Michigan MindMend Inc."}
]
keywords = [
    "triton",
    "attention",
    "rope",
    "gqa",
    "llm",
    "pytorch",
    "deep-learning",
    "transformers"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.0",
    "triton>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "numpy>=1.20",
]

[project.urls]
Homepage = "https://github.com/MiMindMendinc/DominusUltra"
Repository = "https://github.com/MiMindMendinc/DominusUltra"
Issues = "https://github.com/MiMindMendinc/DominusUltra/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dominusultra*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
